Fix canvas jumping before topic is displayed

--- a/modules/game/client/css/drawing.css
+++ b/modules/game/client/css/drawing.css
@@ -1,5 +1,7 @@
 .drawing-header {
   text-align: center;
+  font-size: 2em;
+  height: 2em;
 }
 
 .dt-drawing {
@@ -13,3 +15,4 @@
 .dt-drawing-layer {
   position: absolute;
 }
+
